--- a/index.html
+++ b/index.html
@@ -41,12 +41,19 @@ ideal perez nao vai ganhar a luta de geovane chaves pipipi
         </div>
 
       </section>
+   <section class="elementos"></section>
+   <div class="elementos_container">
 
-
+    <img src="" alt="" class="elementos_">
+   </div>
     </main>
     <footer class="rodape">
+<h2 class="elementos_container-titulo">
+    ideal perez venceu ihu
 
+    <p class="elementos_container-conteudo"></p>
+    geovane louco de refri hahaha
     </footer>
-
+<h2></h2>
 </body>
 </html>
