--- a/index.html
+++ b/index.html
@@ -4,56 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Agrinho2024</title>
+    <title>Agrinho 2024</title>
 </head>
 <body>
     <header class="cabecalho">
-        <img src="https://cec-a.akamaihd.net/img-prod/images/standard/revestimento-esmaltado-brilhante-bold-br10030-antipichacao-cinza-claro-10x10cm-tecnogres-1124855-foto-a460c9c3-3201-45b7-bd21-f33071ed3d0b.png" alt="" class="cabecalho_imagem">
-        <nav class="cabecalho_menu">
-            <ul class="cabecalho_menu-lista">
-                <li class="cabecalho_menu-listaitem">Pagina 1</li>
-                <li class="cabecalho_menu-listaitem">Pagina 2</li>
-                <li class="cabecalho_menu-listaitem">Pagina 3</li>
-
-
+        <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="cabecalho-imagem">
+        <nav class="cabecalho-menu">
+            <ul class="cabecalho-menu-lista">
+                <li class="cabecalho-menu-listaitem"><a href="index.html">HOME</a>
+            
+                </li>
+                <li class="cabecalho-menu-listaitem">
+                    Pagina 2
+                </li>
+                <li class="cabecalho-menu-listaitem">
+                    Pagina 3
+                </li>
             </ul>
-
-
         </nav>
 
-        
     </header>
     <main class="principal">
-      <section class="sobre">
-    <img src="https://cec-a.akamaihd.net/img-prod/images/standard/revestimento-esmaltado-brilhante-bold-br10030-antipichacao-cinza-claro-10x10cm-tecnogres-1124855-foto-a460c9c3-3201-45b7-bd21-f33071ed3d0b.png" alt="" class="sobre_imagem">
-
+       <section class="sobre">
+        <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="sobre_imagem">
         <div class="sobre_texto">
-<h2 class="sobre_texto-titulo">ideal perez</h2>
-
-<p class="sobre_texto-conteudo">
-ideal perez nao vai ganhar a luta de geovane chaves pipipi
-
-
-
-
-</p>
+            <h2 class="sobre_texto-titulo">Aqui será nosso titulo</h2>
+            <p class="sobre_texto-conteudo">
+                Aqui será um texto bem longo, explicando para que server seu site.
+            </p>
 
         </div>
+       </section>
+       <section class="elementos">
+        <div class="elementos__div">
+            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <h1 class="elementos__titulo">
+                titulo da minha imagem
+            </h1>
+            <p class="elementos__texto">
+                texto referente a imagem
+            </p>
+        </div>
+        <div class="elementos__div">
+            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <h1 class="elementos__titulo">
+                titulo da minha imagem
+            </h1>
+            <p class="elementos__texto">
+                texto referente a imagem
+            </p>
+        </div>
+        <div class="elementos__div">
+            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <h1 class="elementos__titulo">
+                titulo da minha imagem
+            </h1>
+            <p class="elementos__texto">
+                texto referente a imagem
+            </p>
+        </div>
+        <div class="elementos__div">
+            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <h1 class="elementos__titulo">
+                titulo da minha imagem
+            </h1>
+            <p class="elementos__texto">
+                texto referente a imagem
+            </p>
+        </div>
+        <div class="elementos__div">
+            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <h1 class="elementos__titulo">
+                titulo da minha imagem
+            </h1>
+            <p class="elementos__texto">
+                texto referente a imagem
+            </p>
+        </div>
+        <div class="elementos__div">
+            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <h1 class="elementos__titulo">
+                titulo da minha imagem
+            </h1>
+            <p class="elementos__texto">
+                texto referente a imagem
+            </p>
+        </div>
+        <div class="elementos__div">
+            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <h1 class="elementos__titulo">
+                titulo da minha imagem
+            </h1>
+            <p class="elementos__texto">
+                texto referente a imagem
+            </p>
+        </div>
+            </section>
 
-      </section>
-   <section class="elementos"></section>
-   <div class="elementos_container">
-
-    <img src="" alt="" class="elementos_">
-   </div>
     </main>
     <footer class="rodape">
-<h2 class="elementos_container-titulo">
-    ideal perez venceu ihu
 
-    <p class="elementos_container-conteudo"></p>
-    geovane louco de refri hahaha
+
     </footer>
-<h2></h2>
+
+
 </body>
 </html>
+>
