--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2017/10/24/15088455594610_640x0.jpg" alt="" class="cabecalho-imagem">
+        <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="cabecalho-imagem">
         <nav class="cabecalho-menu">
             <ul class="cabecalho-menu-lista">
                 <li class="cabecalho-menu-listaitem"><a href="index.html">HOME</a>
@@ -26,7 +26,7 @@
     </header>
     <main class="principal">
        <section class="sobre">
-        <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="sobre_imagem">
+        <img src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2017/10/24/15088455594610_640x0.jpg" alt="" class="sobre_imagem">
         <div class="sobre_texto">
             <h2 class="sobre_texto-titulo">JP auto</h2>
             <p class="sobre_texto-conteudo">
