--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="cabecalho-imagem">
+        <img src="https://yt3.googleusercontent.com/GLpMlCcnFFx8LgD-CDPgO_epoK27UxO0kqhqH6PCPnmCni1Xyrb3THh3yf8gQ2d0rZCuQg7BuQ=s900-c-k-c0x00ffffff-no-rj" alt="" class="cabecalho-imagem">
         <nav class="cabecalho-menu">
             <ul class="cabecalho-menu-lista">
                 <li class="cabecalho-menu-listaitem"><a href="index.html">HOME</a>
