--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                 BUGATTI CHIRON
             </h1>
             <p class="elementos__texto">
-                este carro esta 3,990000
+                este carro esta 3.990.000
             </p>
         </div>
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1CljfmPTdKw85MLUu9Zh7Qbq0a1uBs35muA&s" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                FERRARI 328
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                1.558.220
             </p>
         </div>
         <div class="elementos__div">
