--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
             </p>
         </div>
         <div class="elementos__div">
-            <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="elementos__imagem">
+            <img src="https://s2-autoesporte.glbimg.com/CYBxwOJLTFE8xONoRE5fh5KtwRs=/0x0:4032x2268/924x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_cf9d035bf26b4646b105bd958f32089d/internal_photos/bs/2024/I/s/dbKX1USOqBSvibgUZTxA/ferrari-roma-spider-5.jpg" alt="" class="elementos__imagem">
             <h1 class="elementos__titulo">
-                titulo da minha imagem
+                FERRARI ROMA
             </h1>
             <p class="elementos__texto">
-                texto referente a imagem
+                3.990.000
             </p>
         </div>
         <div class="elementos__div">
